# gekko-challenges

./: Cargo.toml  a.py  bcd.txt  res.txt  result2.txt  result3.txt  results.txt
.cargo/: config
benches/: iter.rs
src/: chars.rs  iter_product.rs  lib.rs  main.rs
