[package]
name = "decrypt"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "decrypt"

[[bench]]
name = "iter"
harness = false

[dependencies]
derive_more = "0.99.17"
itertools = "0.11.0"
pbr = "1.1.1"
serde = { version = "1.0.171", features = ["derive"] }
serde_json = "1.0.102"
zzz = "0.3.1"

[dev-dependencies]
criterion = { version = "0.5.1", features = ["html_reports"] }
